# Sibiu_Nano_p

./: .bash_aliases  .gitignore  Creation_steps.md  README.md  Raspberry.markdown  _config.yml  clase_8_abril.markdown  emprendimiento copy.markdown  emprendimiento.markdown  index.markdown  link  logger.py  plotter.py  requirements.txt  sensors.py  tree.markdown  tutorial.md
_posts/: 2022-03-16-welcome-to-jekyll.markdown
data/: data 10.17.2022..12.24.csv  data 10.21.2022..11.43.csv  data 10.21.2022..11.49.csv  data 10.21.2022..12.12.csv  data 10.21.2022..12.14.csv  data 10.21.2022..12.27.csv  data 11.13.2022..16.48.csv  data 11.13.2022..16.49.csv  data 11.13.2022..16.51.csv  data 11.27.2022..11.40.csv  data 11.27.2022..11.41.csv  data 11.27.2022..11.42.csv  data 11.27.2022..11.50.csv  data 11.27.2022..11.52.csv  data 11.27.2022..11.53.csv  data 11.27.2022..11.56.csv  data 11.27.2022..11.57.csv  data 11.27.2022..12.00.csv  data 11.27.2022..12.01.csv  data 11.27.2022..12.12.csv  data 11.27.2022..12.13.csv  data 11.27.2022..12.14.csv  data 11.27.2022..12.22.csv  data 11.27.2022..12.23.csv  data 11.27.2022..12.25.csv  data 11.27.2022..12.26.csv  data 11.27.2022..12.27.csv  data 11.27.2022..12.31.csv  data 11.27.2022..12.38.csv  data 11.27.2022..12.42.csv  data 11.27.2022..12.43.csv  data 11.27.2022..12.45.csv  data 11.27.2022..13.00.csv  (+27 more)
src/sibiu_nano_p/: package.xml  setup.cfg  setup.py
src/sibiu_nano_p/config/: config.yaml
src/sibiu_nano_p/sibiu_nano_p/: camera_node.py  dronekit_node.py  mission_node.py  mqtt_node.py  planner_node.py  startup.py  watchdog_node.py
(+360 files in other folders)
